--- a/404.html
+++ b/404.html
@@ -4,6 +4,8 @@ permalink: /404.html
 ---
 
 <section class="lost-container">
+	<center>
+	
   <h1>Uh oh!</h1>
   <div class="link">
     <img class="selfie" alt="{{ site.name }}" src="{{ site.url }}/assets/images/error.gif" />
@@ -12,3 +14,4 @@ permalink: /404.html
   <br />
   <a href="/">Take me home!</a>
 </section>
+	</center>
